--- a/about.html
+++ b/about.html
@@ -71,8 +71,11 @@
         @media (max-width: 768px) {
             .hero-headline { font-size: 2.5rem; }
             header { padding: 1rem 5%; }
-            .navbar { display: none; /* Simple hiding for mobile, ideally add a toggle menu */ }
+            .navbar { display: none; }
             section { padding: 60px 5%; }
+            .hero-section { padding-top: 120px; }
+            .section-title { font-size: 2rem; }
+            .cta-box { padding: 30px; }
         }
     </style>
 </head>
@@ -280,3 +283,6 @@
 
 </body>
 </html>
+```
+356.9s
+Use Arrow Up and Arrow Down to select a turn, Enter to jump to it, and Escape to return to the chat.
