--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         .build-btn:hover { gap: 10px; color: var(--primary-blue); }
 
         /* Portfolio Section */
-        .portfolio-section { padding: 100px 10%; background: #fff; } /* Changed to white to alternate */
+        .portfolio-section { padding: 100px 10%; background: #fff; } 
         
         .work-tabs { display: flex; justify-content: center; gap: 15px; margin-bottom: 50px; flex-wrap: wrap; }
         .work-tab { 
@@ -230,13 +230,16 @@
         .modal input { width: 100%; padding: 14px; margin: 12px 0; border: 1px solid #e2e8f0; border-radius: 8px; font-size: 1rem; }
 
         @media (max-width: 768px) {
-            .home-container, .workflow-section { flex-direction: column; text-align: center; padding-top: 120px; }
-            .home-img img, .workflow-img img { width: 100%; margin-top: 50px; }
+            header { padding: 1rem 5%; }
+            .home-container, .workflow-section { flex-direction: column; text-align: center; padding-top: 100px; }
+            .home-img img, .workflow-img img { width: 100%; max-width: 350px; margin-top: 30px; }
             .navbar { display: none; }
             .workflow-text { text-align: left; }
-            .project-grid { grid-template-columns: 1fr; }
+            .project-grid, .build-grid { grid-template-columns: 1fr; }
             .stats-section { gap: 40px; }
-            .home-content h1 { font-size: 2.8rem; }
+            .home-content h1 { font-size: 2.5rem; line-height: 1.2; }
+            .section-header h2 { font-size: 2rem; }
+            section { padding: 60px 5%; }
         }
     </style>
 </head>
@@ -653,3 +656,7 @@
 
 </body>
 </html>
+```
+
+---
+
