--- a/pricing.html
+++ b/pricing.html
@@ -1,3 +1,9 @@
+---
+
+### 2. pricing.html (Pricing Page)
+Grid aur Cards ko mobile par ek-ke-niche-ek (column) kar diya hai.
+
+```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -116,6 +122,10 @@
             .nav-links { display: none; }
             header { padding: 1rem 5%; }
             .pricing-section, .catalog-section { padding: 50px 5%; }
+            .hero h1 { font-size: 2.2rem; }
+            .pricing-grid { grid-template-columns: 1fr; }
+            .price-card.popular { transform: scale(1); margin: 20px 0; }
+            .template-grid { grid-template-columns: 1fr; }
         }
     </style>
 </head>
