--- a/hire.html
+++ b/hire.html
@@ -203,12 +203,14 @@
 
         /* --- RESPONSIVE --- */
         @media (max-width: 900px) {
-            .hero-section { flex-direction: column; padding-top: 100px; text-align: center; }
+            .navbar { display: none; }
+            .hero-section { flex-direction: column; padding-top: 100px; text-align: center; height: auto; min-height: auto; }
             .hero-text { margin-bottom: 50px; }
             .btn-group { justify-content: center; }
-            .hero-img-box { justify-content: center; }
-            .hero-img { height: 400px; border-radius: 20px; }
+            .hero-img-box { justify-content: center; width: 100%; }
+            .hero-img { height: auto; width: 100%; max-width: 350px; border-radius: 20px; }
             .form-wrapper { padding: 30px; }
+            .hero-text h1 { font-size: 2.5rem; }
         }
     </style>
 </head>
