--- a/contact.html
+++ b/contact.html
@@ -198,10 +198,9 @@
         @media (max-width: 900px) {
             .container { grid-template-columns: 1fr; }
             .hero-section { padding-top: 120px; }
-            .navbar { display: none; }
+            .navbar { display: none; } /* Add toggle logic if needed, hiding for simplicity in this snippet */
             header { justify-content: center; }
             .logo { position: absolute; left: 20px; }
-            .hero-section h1 { font-size: 2.2rem; }
         }
     </style>
 </head>
