--- a/about.html
+++ b/about.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -71,8 +72,10 @@
         @media (max-width: 768px) {
             .hero-headline { font-size: 2.5rem; }
             header { padding: 1rem 5%; }
-            .navbar { display: none; /* Simple hiding for mobile, ideally add a toggle menu */ }
+            .navbar { display: none; }
             section { padding: 60px 5%; }
+            .story-text { padding: 25px; }
+            .process-step { flex-direction: column; }
         }
     </style>
 </head>
