--- a/hire.html
+++ b/hire.html
@@ -50,6 +50,7 @@
             justify-content: space-between;
             background: linear-gradient(135deg, #ffffff 0%, #eff6ff 100%);
             overflow: hidden;
+            gap: 40px;
         }
         
         /* Left Content */
@@ -69,7 +70,7 @@
         .hero-text p { font-size: 1.2rem; color: var(--text-gray); margin-bottom: 30px; font-weight: 300; }
         .hero-tags { font-size: 0.95rem; color: var(--text-dark); font-weight: 600; margin-bottom: 40px; letter-spacing: 1px; }
 
-        .btn-group { display: flex; gap: 15px; }
+        .btn-group { display: flex; gap: 15px; flex-wrap: wrap; }
         .btn-primary {
             padding: 15px 35px; background: var(--primary); color: white; border-radius: 50px;
             text-decoration: none; font-weight: 600; box-shadow: 0 5px 15px rgba(37, 99, 235, 0.3); transition: 0.3s;
@@ -91,7 +92,8 @@
         .hero-img {
             width: 100%;
             max-width: 500px;
-            height: 600px;
+            height: auto;
+            max-height: 600px;
             object-fit: cover;
             /* Premium Rounded Corner Style */
             border-radius: 40px; 
@@ -204,11 +206,12 @@
         /* --- RESPONSIVE --- */
         @media (max-width: 900px) {
             .hero-section { flex-direction: column; padding-top: 100px; text-align: center; }
-            .hero-text { margin-bottom: 50px; }
+            .hero-text { margin-bottom: 40px; }
+            .hero-text h1 { font-size: 2.5rem; }
             .btn-group { justify-content: center; }
-            .hero-img-box { justify-content: center; }
-            .hero-img { height: 400px; border-radius: 20px; }
-            .form-wrapper { padding: 30px; }
+            .hero-img-box { justify-content: center; width: 100%; }
+            .hero-img { height: auto; max-width: 350px; border-radius: 20px; }
+            .form-wrapper { padding: 30px 20px; }
         }
     </style>
 </head>
