--- a/pricing.html
+++ b/pricing.html
@@ -63,7 +63,7 @@
 
         /* --- TEMPLATE CATALOG --- */
         .catalog-section { padding: 80px 10%; background: #ffffff; }
-        .template-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(320px, 1fr)); gap: 30px; }
+        .template-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); gap: 30px; }
         .template-card {
             background: white; border: 1px solid #f1f5f9; border-radius: 16px; overflow: hidden;
             transition: 0.3s; box-shadow: 0 4px 6px rgba(0,0,0,0.02); display: flex; flex-direction: column; position: relative;
@@ -115,7 +115,10 @@
         @media (max-width: 768px) {
             .nav-links { display: none; }
             header { padding: 1rem 5%; }
+            .hero h1 { font-size: 2.2rem; }
             .pricing-section, .catalog-section { padding: 50px 5%; }
+            .pricing-grid { grid-template-columns: 1fr; }
+            .price-card.popular { transform: scale(1); border: 2px solid var(--primary); }
         }
     </style>
 </head>
@@ -398,3 +401,4 @@
 
 </body>
 </html>
+```
