--- a/contact.html
+++ b/contact.html
@@ -299,9 +299,9 @@
                         <label>Budget Range</label>
                         <select>
                             <option>Select Budget</option>
-                            <option>$100 - $500</option>
-                            <option>$500 - $1500</option>
-                            <option>$1500+</option>
+                            <option>₹299 - ₹500</option>
+                            <option>₹500 - ₹1500</option>
+                            <option>₹1500+</option>
                         </select>
                     </div>
                     <div class="form-group">
@@ -333,7 +333,7 @@
                 <div class="info-text">
                     <h4>Chat on WhatsApp</h4>
                     <p>Fastest response time</p>
-                    <a href="#">+91 12345 67890</a>
+                    <a href="#">+91 9376917149</a>
                 </div>
             </div>
             <!-- Card 2 -->
@@ -342,7 +342,7 @@
                 <div class="info-text">
                     <h4>Email Support</h4>
                     <p>Send project briefs</p>
-                    <a href="mailto:hello@devstudio.com">hello@devstudio.com</a>
+                    <a href="mailto:hello@devstudio.com">as90241074@gmail.com</a>
                 </div>
             </div>
             <!-- Card 3 -->
@@ -351,7 +351,7 @@
                 <div class="info-text">
                     <h4>Call Me</h4>
                     <p>Mon-Fri, 9am - 6pm</p>
-                    <a href="#">+91 98765 43210</a>
+                    <a href="#">+91 9376917149</a>
                 </div>
             </div>
             
@@ -420,7 +420,7 @@
             <details>
                 <summary>What is the starting price?</summary>
                 <div class="faq-answer">
-                    My packages start from as low as $150 (approx ₹12,000) for a standard landing page. Please check the Pricing page or contact me for a custom quote.
+                    My packages start from as low as ₹499 (approx ₹12,000) for a standard landing page. Please check the Pricing page or contact me for a custom quote.
                 </div>
             </details>
         </div>
