--- a/index.html
+++ b/index.html
@@ -422,22 +422,22 @@
             <div class="step">
                 <span class="step-num">01</span>
                 <div>
-                    <h4>Discovery & Strategy</h4>
-                    <p>We discuss your goals, target audience, and requirements to build a solid roadmap.</p>
+                    <h4>Understand & Plan</h4>
+                    <p>I first understand your goals, requirements, and design preferences, then create a clear plan for your website.</p>
                 </div>
             </div>
             <div class="step">
                 <span class="step-num">02</span>
                 <div>
-                    <h4>Design & Development</h4>
-                    <p>I create visual mockups and write clean, efficient code to bring the design to life.</p>
+                    <h4>Design & Develop</h4>
+                    <p>I design a modern, responsive layout and build a fast, secure, and SEO-friendly website tailored to your needs.</p>
                 </div>
             </div>
             <div class="step">
                 <span class="step-num">03</span>
                 <div>
-                    <h4>Launch & Support</h4>
-                    <p>After rigorous testing, we go live. I provide ongoing support.</p>
+                    <h4>Review & Launch</h4>
+                    <p>You review the website, revisions are done if needed, and then I launch it with full support and guidance.</p>
                 </div>
             </div>
         </div>
@@ -453,7 +453,7 @@
         </div>
         <div class="faq-item" onclick="this.classList.toggle('active')">
             <div class="faq-question">How much does a website cost? <i class='bx bx-chevron-down'></i></div>
-            <div class="faq-answer">The cost depends on the complexity and features. A basic site starts at $500.</div>
+            <div class="faq-answer">The cost depends on the complexity and features. A basic site starts at ₹499.</div>
         </div>
         <div class="faq-item" onclick="this.classList.toggle('active')">
             <div class="faq-question">How long does it take to build? <i class='bx bx-chevron-down'></i></div>
@@ -480,6 +480,7 @@
                 <h4>Connect</h4>
                 <ul>
                     <li><a href="mailto:as90241074@gmail.com">as90241074@gmail.com</a></li>
+                    <li>+91-9376917149</a></li>
                     <li style="font-size: 1.5rem; margin-top: 15px;">
                         <i class='bx bxl-linkedin-square' style="margin-right: 10px; cursor: pointer;"></i>
                         <i class='bx bxl-github' style="margin-right: 10px; cursor: pointer;"></i>
