--- a/hire.html
+++ b/hire.html
@@ -396,7 +396,7 @@
             <!-- Card 1 -->
             <div class="price-card">
                 <h3>Starter</h3>
-                <span class="price">₹1,499</span>
+                <span class="price">₹499</span>
                 <p style="color:#64748b; font-size:0.9rem;">Basic Landing Page</p>
                 <a href="#clientForm" class="price-btn">Select This</a>
             </div>
@@ -453,7 +453,7 @@
                     <div class="form-group">
                         <label>Your Budget</label>
                         <select>
-                            <option>₹1,500 - ₹3,000</option>
+                            <option>₹300 - ₹3,000</option>
                             <option>₹3,000 - ₹6,000</option>
                             <option>₹6,000+</option>
                         </select>
@@ -465,13 +465,7 @@
                     <textarea rows="5" placeholder="Describe your idea..."></textarea>
                 </div>
 
-                <div class="form-group">
-                    <label>Reference Images (Optional)</label>
-                    <div class="file-input-wrapper">
-                        <label class="file-btn">
-                            <i class="fas fa-cloud-upload-alt"></i> Click to Upload Files
-                        </label>
-                        <input type="file">
+                
                     </div>
                 </div>
 
@@ -490,7 +484,7 @@
         <h2>Ready to Start Your Website?</h2>
         <div class="btn-group" style="justify-content: center; margin-top: 30px;">
             <a href="#clientForm" class="btn-primary" style="background: white; color: #1e293b;">Hire Me Now</a>
-            <a href="#" class="btn-outline" style="border-color: rgba(255,255,255,0.3); color: white;"><i class="fab fa-whatsapp"></i> WhatsApp Me</a>
+            <a href="#" class="btn-outline" style="border-color: rgba(255,255,255,0.3); color: rgb(22, 21, 21);"><i class="fab fa-whatsapp"></i> WhatsApp Me</a>
         </div>
     </section>
 
